fix the modal dialog alignment

--- a/nut/static/css/web/web-seller-style.less
+++ b/nut/static/css/web/web-seller-style.less
@@ -395,7 +395,6 @@ ol{
 
   //add sctions-item-background-pic
 
-
   .popular-shops-title-wrapper{
     margin-top:60px;
     margin-bottom: 50px;
@@ -461,16 +460,11 @@ ol{
         }
 
       }
-
     }
       }
-
   }
-
 }
-
 }
-
 
 //model style
 .page-share-dialog{
@@ -478,26 +472,22 @@ ol{
     .modal-content{
       .modal-header{
         display: none;
-
       }
       .modal-body{
         padding:0px;
         .share-modal-wrapper{
-
           &.share-modal-wrapper-control{
-
-             background-size: cover;
-          //background-position:center;
-          padding-top:200px;
-
+            background-size: cover;
+            //background-position:center;
+            padding-top:190px;
+            margin-bottom: 60px;
           .qr-code-wrapper{
-
+            margin-bottom: 10px;
             &.qr-code-control{
               text-align: center;
             }
 
           }
-
           .weibo-share-btn-wrapper-control{
             .pg-weibo-share-btn{
               display: block;
@@ -509,7 +499,6 @@ ol{
               }
             }
           }
-
           .qq-share-btn-wrapper-control{
             .pg-qq-share-btn{
               display:block;
@@ -521,8 +510,6 @@ ol{
               }
             }
           }
-
-
           .share-btn-wrapper{
             .pg-weibo-share-btn{
               &.pg-weibo-share-btn-bgc{
@@ -633,9 +620,6 @@ ol{
 
 }
 
-
-
-
 @media screen and (min-width:768px) and (max-width: 1200px){
    .seller-page-container{
     .sections-item-wrapper{
@@ -668,19 +652,6 @@ ol{
             }
         }
       }
-      //.sections-item-sellers-wrapper{
-      //  .sellers-wrapper{
-      //    .sellers-desc{
-      //    p{
-      //      width:100%;
-      //      padding-left:4%;
-      //      padding-right:4%;
-      //    }
-      //  }
-      //
-      //  }
-      //
-      //}
     }
   }
 
@@ -692,10 +663,7 @@ ol{
   }
 
   }
-//}
-
 }
-
 
 @media screen and (min-width:768px) {
 
@@ -755,8 +723,7 @@ ol{
 
   }
 
-
-  @media screen and (max-width:768px){
+@media screen and (max-width:768px){
     .seller-body{
       .sections-titles-wrapper{
         .section-title{
@@ -823,7 +790,7 @@ ol{
 }
 
  //fix popular shops responsive bug
- @media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 992px){
    .seller-body{
      .seller-page-container{
        .popular-shops-wrapper{
@@ -869,6 +836,21 @@ ol{
     }
   }
 
+  //model style
+.page-share-dialog{
+  .modal-dialog{
+    .modal-content{
+      .modal-body{
+        .share-modal-wrapper{
+          &.share-modal-wrapper-control{
+            padding-top:30%;
+            margin-bottom: 10%;
+          }
+        }
+      }
+    }
+  }
+}
 }
 
 @media screen and (max-width: 580px){
@@ -922,26 +904,20 @@ ol{
       }
     }
   }
-
   //model style
 .page-share-dialog{
   .modal-dialog{
     .modal-content{
       .modal-body{
         .share-modal-wrapper{
-
           &.share-modal-wrapper-control{
-
-            background-position:center top;
             padding-top:37%;
-
+            margin-bottom: 14%;
+            background-position:center top;
           }
-
         }
-
       }
     }
   }
-
 }
 }
